--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
-body{
-    background-color: #212121;
-    color: #fff;
+body {
+    background-color: #f0f8ff; /* Light blue background */
+    color: #333; /* Dark gray text */
+    font-family: 'Arial', sans-serif;
 }
 main {
     display: flex;
@@ -17,9 +18,15 @@ main {
     padding: 10px;
     position: relative;
 }
+main h2{
+    position: absolute;
+    bottom: 2%;
+    left: 50%;
+    transform: translateX(-50%);
+}
 main h2 a{
     text-decoration: none;
-    color: #fff;
+    color: black;
 }
 main h2:hover{
     cursor: pointer;
@@ -47,17 +54,26 @@ main button:hover{
     border-left: none;
     outline: none;
     margin: 0 8px;
-    color: #fff;
+    color: black;
+    
 }
 input ::placeholder{
-    color: #fff;
+    color: black;
+}
+a{
+    color: black;
 }
 #explore-btn{
 position: absolute;
 bottom: 0;
 }
-header{
-    box-shadow:0 15px 20px rgba(0,0,0,0.5)
+header {
+    background-color: #4caf50; /* Green header background */
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    width: 100%;
 }
 header h1{
     text-align: center;
@@ -86,7 +102,7 @@ section{
     max-width: 80%;
 }
 section ul li a {
-    color: #fff;
+    color: black;
     text-decoration: none;
 }
 .about-developer {
@@ -147,13 +163,15 @@ section ul li a {
     width: 100%;
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
+    
     background-color: transparent;
-    border-bottom: 1px solid #fff;
+    /* border-bottom: 1px solid #fff; */
     flex-wrap: wrap;
     gap: 15px;
     padding: 12px;
     margin: 20px;
+    column-gap: 45px;
 }
 .i-button{
     position: fixed;
